--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <div class="forms">
 <form class="book-creator" id="book-creator">
-    <input id="title" type="text" placeholder="Book title">
-    <input id="bookid" type="text" placeholder="Book ID">
-    <input id="released" type="text" placeholder="Release year">
+    <input id="title" name="title" type="text" placeholder="Book title">
+    <input id="bookid" name="id" type="text" placeholder="Book ID">
+    <input id="released" name="released" type="text" placeholder="Release year">
     <select name="author" id="book-creator__author">
         <option value="author">Author</option>
     </select>
